# coinex_trader

./: .env.example  .gitignore  AGENTS.md  README.md  kilo.json  launcher.bat  package-lock.json  package.json  setup_and_run.bat  specs.md  vercel.json
app/backend/: .env.example  main.py  pyproject.toml  requirements.txt  vercel.json
app/backend/engines/: analysis.py  risk.py  scoring.py
app/backend/models/: trading.py
app/backend/utils/: coinex_client.py  exchange_clients.py  history_manager.py  websocket_manager.py
app/backend1/: main.py
app/backend2/app/: main.py
app/backend2/app/core/: config.py
app/backend2/app/models/: schemas.py
app/backend2/app/services/: analysis_service.py  binance_service.py
app/backend2/app/utils/: indicators.py
app/frontend/: capacitor.config.json  package-lock.json  vercel.json
app/frontend/src/: App.jsx
app/frontend/src/components/: ActionButtons.jsx  AnalysisBoard.jsx  AnalysisPulse.jsx  Header.jsx  HistoryView.jsx  MarketList.jsx  PositionsTable.jsx  RiskManagementView.jsx  (+3 more)
app/trader/: requirements.txt
app/web/: .env.example  .env.local.example  package-lock.json  package.json  tailwind.config.js
app/web/src/: App.jsx  index.css
backend/engines/: analysis.py
backend/models/: trading.py
release/: apkify.bat  apkiky.bat  build.bat  create_icon.bat  exeify  exeify.bat  exeify.cs  iconify.bat  launcher.cs
web/: index.html  package-lock.json  package.json
web/src/: App.jsx
web/src/components/: AnalysisBoard.jsx  Header.jsx  MarketList.jsx  RiskManagementView.jsx  RiskPanel.jsx  StrategyView.jsx
(+19 files in other folders)
